fix table layout on mobile

--- a/src/containers/Dashboard/Dashboard.css
+++ b/src/containers/Dashboard/Dashboard.css
@@ -12,3 +12,67 @@
 .close-issue-modal__footer > button:first-child {
     margin-right: 0.4rem;
 }
+
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+@media
+only screen and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr {
+		display: block !important;
+	}
+
+	thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+    .dropdown {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    td {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+        padding-left: 50% !important;
+        min-height: 50px;
+	}
+
+    td:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+        top: .75rem;
+		left: .75rem;
+		padding-right: 10px;
+        white-space: nowrap;
+        font-weight: bold;
+    }
+
+    .table-hover tbody tr:hover {
+        background-color: initial;
+    }
+
+    .table-striped tbody tr:nth-of-type(odd):hover {
+        background-color: rgba(0,0,0,.05);
+    }
+
+    td:nth-of-type(1):before { content: "Title"; }
+    td:nth-of-type(2):before { content: "Description"; }
+    td:nth-of-type(3):before { content: "State"; }
+    td:nth-of-type(4):before { content: "Labels"; }
+    td:nth-of-type(5):before { content: "Assignee"; }
+}
+
+.table td, .table th {
+    vertical-align: middle;
+}
